@@ -3,6 +3,8 @@
 	* device/lib/stm8/memcpy.s,
 	  support/regression/tests/memory.c:
 	  Fix an issue in stm8 unrolled memcpy().
+	* device/lib/stm8/__mulsint2slong.s:
+	  Optimize multiplication routine for small operands.
 
 2016-07-21 Philipp Klaus Krause <pkk AT spth.de>
 
